Fix up some css and spacing, add tooltips and try to make work on mobile

--- a/src/frontend/static/css/elo-graph.css
+++ b/src/frontend/static/css/elo-graph.css
@@ -1,20 +1,14 @@
 #eloGraph {
   width: 90%;
+  /* Disable double click to zoom on mobile */
+  touch-action: manipulation;
 }
 
 .svg-container {
-  display: inline-block;
-  position: relative;
   width: 100%;
-  padding-bottom: 100%;
-  vertical-align: top;
   overflow: hidden;
 }
 .svg-content-responsive {
-  display: inline-block;
-  position: absolute;
-  top: 10px;
-  left: 0;
 }
 
 .tick line {
